# esp32c3-embassy

./: Cargo.toml  Readme.md
.cargo/: config.toml
src/: gpio.rs  main.rs
